# rpass

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.nix  release-plz.toml  repocfg.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post-create-command.sh  post-start-command.sh
.github/workflows/: publish.yml  release.yml  review.yml
docs/_readme/: installation.md  intro.md  license.md  todo.md  usage.md
src/: lib.rs  main.rs  store.rs  utils.rs
src/cli/: _copy.rs  edit.rs  git.rs  init.rs  mod.rs  remove.rs  show.rs
src/commands/: _copy.rs  _move.rs  edit.rs  generate.rs  git.rs  init.rs  insert.rs  list.rs  mod.rs  remove.rs  show.rs
