[package]
name = "rpass"
version = "0.1.3"
authors = ["Arinze Chianumba"]
edition = "2024"
description = "A (symmetric/asymmetric) GPG-based secrets manager for the CLI"
readme = "README.md"
homepage = "https://achianumba.github.io/rpass"
repository = "https://github.com/achianumba/rpass"
license-file = "LICENSE"
keywords = [
  "rpass",
  "pass",
  "secrets",
  "password",
  "secrets-manager"
]
categories = [ "command-line-utilities" ]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
arboard = "3.6.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
eyre = "0.6.12"
gpgme = "0.11.0"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v4"] }
