[package]
name = "rpass"
version = "0.1.7"
authors = ["Arinze Chianumba"]
edition = "2024"
description = "A (symmetric/asymmetric) GPG-based secrets manager for the CLI"
readme = "README.md"
homepage = "https://achianumba.github.io/rpass"
repository = "https://github.com/achianumba/rpass"
license-file = "LICENSE"
keywords = [
  "rpass",
  "pass",
  "secrets",
  "password",
  "secrets-manager"
]
categories = [ "command-line-utilities" ]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
arboard = "3.6.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.2"
rpassword = "7.4.0"
toml = "0.9.5"
uuid = { version = "1.17.0", features = ["v4"] }
