[package]
name = "rpass"
version = "0.1.9"
authors = ["Arinze Chianumba"]
edition = "2024"
description = "GPG-based secrets manager with asymmetric and symmetric encryption support."
readme = "README.md"
homepage = "https://achianumba.github.io/rpass"
repository = "https://github.com/achianumba/rpass"
license-file = "LICENSE"
keywords = [
  "rpass",
  "pass",
  "secrets",
  "password",
  "secrets-manager"
]
categories = [ "command-line-utilities" ]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.10.0"
rpassword = "7.4.0"
toml = "1.0.3"
uuid = { version = "1.21.0", features = ["v4"] }
